<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp">

        <TextView
            android:id="@+id/edit_profile_dialog_field_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_profile_dialog_field_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:text="12345678912345678912s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_dialog_field_title" />

        <TextView
            android:id="@+id/edit_profile_dialog_field_max_ems_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@id/edit_profile_dialog_field_et"
            app:layout_constraintBottom_toBottomOf="@id/edit_profile_dialog_field_et"/>

        <TextView
            android:id="@+id/edit_profile_dialog_save_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_dialog_field_et"
            />


        <TextView
            android:id="@+id/edit_profile_dialog_cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_dlg"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/edit_profile_dialog_save_tv"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_dialog_field_et"
            android:layout_marginRight="@dimen/_16sdp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>