<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
     >

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_content_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:elevation="12dp"
                    android:id="@+id/user_profile_photo"
                    android:layout_height="120dp"
                    android:layout_marginTop="30dp"
                    android:layout_width="120dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/restaurant"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:background="@drawable/profile_circular_border_imageview"
                    android:elevation="12dp"
                    android:id="@+id/change_photo"
                    android:layout_gravity="center"
                    android:layout_height="40dp"
                    android:layout_width="40dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_photo_camera"
                    app:layout_constraintBottom_toBottomOf="@id/user_profile_photo"
                    app:layout_constraintEnd_toEndOf="@id/user_profile_photo" />

                <TextView
                    android:elevation="4dp"
                    android:gravity="center"
                    android:id="@+id/user_profile_name"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingTop="16dp"
                    android:text="Mahmoud Osama"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_profile_photo" />

                <TextView
                    android:gravity="center"
                    android:id="@+id/user_profile_email"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="8dp"
                    android:text="@string/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_profile_name" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_profile_email">

                    <TextView
                        android:background="#fff"
                        android:clickable="true"
                        android:drawableEnd="@drawable/ic_mode_edit_black_24dp"
                        android:drawableRight="@drawable/ic_mode_edit_black_24dp"
                        android:elevation="4dp"
                        android:id="@+id/profile_phone_number"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:padding="20dp"
                        android:text="@string/phone_number" />

                    <TextView
                        android:background="#fff"
                        android:clickable="true"
                        android:drawableEnd="@drawable/ic_mode_edit_black_24dp"
                        android:drawableRight="@drawable/ic_mode_edit_black_24dp"
                        android:elevation="4dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_width="match_parent"
                        android:padding="20dp"
                        android:text="@string/gender_text" />

                    <TextView
                        android:background="#fff"
                        android:drawableEnd="@drawable/ic_mode_edit_black_24dp"
                        android:drawableRight="@drawable/ic_mode_edit_black_24dp"
                        android:elevation="4dp"
                        android:id="@+id/profile_country"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:padding="20dp"
                        android:text="Egyypt" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_layout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_40sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_logo2"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Log in to your account or Sign up"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_8sdp"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/log_in_button"
                    android:layout_height="40dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    style="@style/log_in_buttons"
                    android:text="Register Now"
                    android:background="@color/colorPrimary"
                    />
            </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>